--- a/style.css
+++ b/style.css
@@ -3,11 +3,9 @@ body {
     text-align: center;
     padding: 20px;
 }
-input {
-    padding: 10px;
-}
 button {
     padding: 10px;
+    border-radius: 5px;
     cursor: pointer;
 }
 .results {
